[package]
edition = "2021"
name = "chess-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
crossterm = "0.21.0"
tui = {version = "0.16.0", default-features = false, features = ['crossterm']}
